--- a/test_4.6/test_4.6/test_4.6.vcxproj
+++ b/test_4.6/test_4.6/test_4.6.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="小飞机.c" />
+    <ClCompile Include="字符函数和字符串函数.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
