--- a/test_4.6/test_4.6/test_4.6.vcxproj.filters
+++ b/test_4.6/test_4.6/test_4.6.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="小飞机.c">
+    <ClCompile Include="字符函数和字符串函数.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
