三子棋改进版

--- a/三子棋/三子棋/三子棋.vcxproj
+++ b/三子棋/三子棋/三子棋.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="game.c" />
     <ClCompile Include="test.c" />
+    <ClCompile Include="实现电脑智能化.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
