--- a/三子棋/三子棋/三子棋.vcxproj.filters
+++ b/三子棋/三子棋/三子棋.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="test.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="实现电脑智能化.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
