--- a/sort/sort/sort.vcxproj.filters
+++ b/sort/sort/sort.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClCompile Include="text.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="stack.h">
+      <Filter>头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="stack.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
